[build-system]
requires = [
    "setuptools>=61",
    "setuptools-scm>=8.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "gd-node"
version = "3.0.4.1"
authors = [
    {name = "Backend team", email = "backend@mov.ai"},
]
description = "GD Node."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "aiohttp==3.8.1",
    "aiohttp_cors==0.7.0",
    "bleach==4.1.0",
    "uvloop==0.14.0",
    "data-access-layer>=3.0.2.1",
]

[project.urls]
Repository = "https://github.com/MOV-AI/gd-node"

[project.scripts]
gd_node = "gd_node.__main__:main"

[tool.setuptools.packages.find]
include = ["gd_node*"]
exclude = ["gd_node.tests*"]

[tool.black]
line-length = 100

[tool.bumpversion]
current_version = "3.0.4.1"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)?(\\.(?P<build>\\d+))?"
serialize = ["{major}.{minor}.{patch}.{build}"]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
regex = true

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = '# vTBD'
serialize = ["{major}.{minor}.{patch}"]
replace = "# v{new_version}"
regex = true
ignore_missing_version = true
